# CREA-sesame-companion

./: .env  .gitignore  README.md  pyproject.toml  requirements.txt  sesame_companion.py  sesame_gui.py
crea_sesame_companion.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
